--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,13 +14,13 @@ idea.module {
 }
 
 android {
-    namespace 'emu.skyline'
+    namespace 'emu.sulfur'
     compileSdk 33
 
     var isBuildSigned = (System.getenv("CI") == "true") && (System.getenv("IS_SKYLINE_SIGNED") == "true")
 
     defaultConfig {
-        applicationId "skyline.emu"
+        applicationId "sulfur.emu"
 
         minSdk 29
         targetSdk 33
@@ -112,14 +112,14 @@ android {
     productFlavors {
         full {
             dimension = "version"
-            manifestPlaceholders += [appLabel: "Skyline"]
+            manifestPlaceholders += [appLabel: "Sulfur"]
         }
 
         dev {
             dimension = "version"
             applicationIdSuffix = ".dev"
             versionNameSuffix = "-dev"
-            manifestPlaceholders += [appLabel: "Skyline Dev"]
+            manifestPlaceholders += [appLabel: "Sulfur Dev"]
         }
     }
 
@@ -194,3 +194,4 @@ dependencies {
 kapt {
     correctErrorTypes true
 }
+
