--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ idea.module {
 }
 
 android {
-    namespace 'emu.sulfur'
+    namespace 'emu.skyline'
     compileSdk 33
 
     var isBuildSigned = (System.getenv("CI") == "true") && (System.getenv("IS_SKYLINE_SIGNED") == "true")
